--- a/archivos/templates/menu_usuario.html
+++ b/archivos/templates/menu_usuario.html
@@ -86,7 +86,7 @@
     </div>
     {% endif %}
 
-    <!-- Lista de archivos -->
+    <!-- Lista de archivos aaaa -->
     <div class="list-container">
         <h2>Lista de Solicitudes</h2>
         <table class="table table-dark table-striped">
